<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="karthik.sjsu.com.servicesapp.PDFActivity"
    tools:showIn="@layout/activity_pdf"
    android:background="@color/teal">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/sjsu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_activity_pdf"
        android:id="@+id/textView"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/PDFLink1"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"

        android:layout_below="@+id/imageView"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/pdf1Txt"
        android:editable="false"
        android:layout_marginTop="0dp"
        android:background="@color/white"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/link1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/PDFLink2"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/pdf2Txt"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/pdf2Txt"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:editable="false"
        android:layout_below="@+id/pdf1Txt"
        android:layout_alignLeft="@+id/pdf1Txt"
        android:layout_alignStart="@+id/pdf1Txt"
        android:text="@string/link2" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/pdf3Txt"
        android:editable="false"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/pdf2Txt"
        android:layout_alignLeft="@+id/pdf2Txt"
        android:layout_alignStart="@+id/pdf2Txt"
        android:text="@string/link3" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/pdf4Txt"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/pdf3Txt"
        android:editable="false"
        android:layout_alignLeft="@+id/pdf3Txt"
        android:layout_alignStart="@+id/pdf3Txt"
        android:text="@string/link4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/PDFLink3"
        android:id="@+id/textView5"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_above="@+id/pdf4Txt"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/PDFLink4"
        android:id="@+id/textView6"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_alignBottom="@+id/pdf4Txt"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/PDFLink5"
        android:id="@+id/textView7"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/pdf5Txt"
        android:background="@color/white"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/pdf4Txt"
        android:layout_alignStart="@+id/pdf4Txt"
        android:editable="false"
        android:text="@string/link5" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:id="@+id/imageButton2"
        android:src="@drawable/download2"
        android:background="@color/black"
        android:onClick="startDownload"
        android:backgroundTint="@color/teal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/pdf5Txt"
        android:layout_alignStart="@+id/pdf5Txt"
        android:layout_marginBottom="39dp" />


</RelativeLayout>
