<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="karthik.sjsu.com.servicesapp.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/teal">


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/sjsu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ServicesAppTitle"
        android:id="@+id/textView"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:textSize="25dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="33dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ServicesText"
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/PDFDload"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:id="@+id/button"
        android:onClick="goToPDFDownload"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_marginBottom="38dp"
        android:src="@drawable/exit2"
        android:onClick="exitApp"
        android:background="@color/black"
        android:scaleType="centerInside"
        android:backgroundTint="@color/teal"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
